--- a/app_udp_demo/.cproject
+++ b/app_udp_demo/.cproject
@@ -181,6 +181,14 @@
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/autoip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/dhcpc}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/igmp}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/lib}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rime}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rpl}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/sys}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/uip_arch}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp}&quot;' />
@@ -320,6 +328,14 @@
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/autoip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/dhcpc}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/igmp}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/lib}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rime}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rpl}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/sys}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/uip_arch}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp}&quot;' />
@@ -465,6 +481,14 @@
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/autoip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/dhcpc}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/igmp}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/lib}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rime}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rpl}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/sys}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/uip_arch}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp}&quot;' />
