--- a/module_xtcp/.cproject
+++ b/module_xtcp/.cproject
@@ -171,6 +171,14 @@
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/autoip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/dhcpc}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/igmp}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/lib}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rime}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rpl}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/sys}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/uip_arch}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp}&quot;' />
@@ -300,6 +308,14 @@
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/autoip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/dhcpc}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/igmp}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/lib}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rime}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rpl}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/sys}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/uip_arch}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp}&quot;' />
@@ -435,6 +451,14 @@
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/autoip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/dhcpc}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip/igmp}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/lib}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rime}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net/rpl}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/net}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki/sys}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/contiki}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6/uip_arch}&quot;' />
+<listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip6}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src/xtcp_uip}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp/src}&quot;' />
 <listOptionValue builtIn="false" value='&quot;${workspace_loc:/module_xtcp}&quot;' />
